--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>服務條款 - App</title>
+    <title>隱私權政策 - App</title>
 </head>
 <body>
-    <h1>服務條款</h1>
-    <p>這是 App 的服務條款。使用我們的服務即表示您同意這些條款。</p>
+    <h1>隱私權政策</h1>
+    <p>這是 App 的隱私權政策。我們重視您的隱私。</p>
 </body>
 </html>
